[gd_scene load_steps=24 format=2]

[ext_resource path="res://recursos/Enemies/b.png" type="Texture" id=1]
[ext_resource path="res://recursos/Enemies/a.png" type="Texture" id=2]
[ext_resource path="res://recursos/Enemies/c.png" type="Texture" id=3]
[ext_resource path="res://recursos/Enemies/d.png" type="Texture" id=4]
[ext_resource path="res://recursos/Enemies/e.png" type="Texture" id=5]
[ext_resource path="res://recursos/Enemies/f.png" type="Texture" id=6]
[ext_resource path="res://scripts/esqueleto.gd" type="Script" id=7]
[ext_resource path="res://scripts/react.gd" type="Script" id=8]
[ext_resource path="res://recursos/Enemies/g.png" type="Texture" id=9]
[ext_resource path="res://recursos/Enemies/h.png" type="Texture" id=10]
[ext_resource path="res://recursos/Enemies/i.png" type="Texture" id=11]
[ext_resource path="res://recursos/Enemies/l.png" type="Texture" id=12]
[ext_resource path="res://recursos/Enemies/j.png" type="Texture" id=13]
[ext_resource path="res://recursos/Enemies/k.png" type="Texture" id=14]
[ext_resource path="res://recursos/Enemies/m.png" type="Texture" id=15]
[ext_resource path="res://recursos/Enemies/dd2.png" type="Texture" id=16]
[ext_resource path="res://recursos/Enemies/aa2.png" type="Texture" id=17]
[ext_resource path="res://recursos/Enemies/cc2.png" type="Texture" id=18]
[ext_resource path="res://recursos/Enemies/bb2.png" type="Texture" id=19]
[ext_resource path="res://recursos/Enemies/b2.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=78]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 15 ) ],
"loop": true,
"name": "walk",
"speed": 11.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 16 ), ExtResource( 2 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ) ],
"loop": true,
"name": "dead",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=79]
height = 53.9928

[sub_resource type="CapsuleShape2D" id=80]
radius = 12.6
height = 16.4

[node name="esqueleto" type="KinematicBody2D"]
position = Vector2( 1, -7 )
scale = Vector2( 5, 5 )
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.2, -0.2 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 78 )
animation = "walk"
frame = 11
playing = true
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 9.8, -3 )
polygon = PoolVector2Array( -6.2, -9.8, -16, -9, -16.4, 0, -22.4, 5.8, -20.8, 13, -19.4, 25.8, -2, 25.6, -2.6, 11, -1.6, 6.6, -1.8, 3.2, -5.6, 3.2, -3.8, -5 )

[node name="ray_wall" type="RayCast2D" parent="."]
position = Vector2( 0.4, 5.6 )
rotation = -4.71238
scale = Vector2( 1, 0.3 )
enabled = true

[node name="react" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="react"]
position = Vector2( -8.2, 7.2 )
rotation = -4.72635
shape = SubResource( 79 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="esqueleto" type="Area2D" parent="."]
position = Vector2( -2, 5.8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="esqueleto"]
position = Vector2( -0.4, 9.53674e-07 )
shape = SubResource( 80 )

[node name="ray_wall2" type="RayCast2D" parent="."]
position = Vector2( -2.8, 5 )
rotation = -1.57079
scale = Vector2( 1, 0.3 )
enabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="react" to="." method="_on_react_area_entered"]
[connection signal="area_entered" from="esqueleto" to="." method="_on_esqueleto_area_entered"]
